EDOSPNC-405 Correction alignement

--- a/src/pages/professional-level/professional-level.scss
+++ b/src/pages/professional-level/professional-level.scss
@@ -9,6 +9,9 @@ page-professional-level {
         font-weight: bolder;
         font-size: 18px;
         height: 48px;
+    }
+
+    .professional-level-row {
         align-items: center;
     }
 
